--- a/Unit 4 Project Birds/css/main.css
+++ b/Unit 4 Project Birds/css/main.css
@@ -1,14 +1,13 @@
 body{
 	background-color:#0b6a8f;
 }
-h1{
-	font-family: 'Lora', serif;
-	color:white;
+h1{ 
+	font-family: 'Loved by the King', cursive;
+	color:black;
 	font-size:46px;
 	font-style:normal;
 	font-weight:700;
 	text-align:center;
-	text-decoration:underline;
 	text-transform:capitalize;   
 }
 
