--- a/Unit5/css/main.css
+++ b/Unit5/css/main.css
@@ -1,7 +1,10 @@
 body {
 	background-color:#ADD6FF;
+	margin:0; 
+	padding:0;
+	box-sizing: border-box;	  
 }
-.clearfix:after; {
+.clearfix:after {
 	visibility: hidden;
 	display: block;
 	font-size: 0;
@@ -9,11 +12,12 @@ body {
 	clear:both;
 	height: 0;
 }
+
 header {
 	overflow: auto;
-	background-color: #FFD1D1;;
+	background-color: #FFD1D1;
 	background-image: 
-	background-position:left;
+	background-position: left;
 	background-repeat: no-repeat;
 }
 
@@ -23,74 +27,83 @@ nav {
 	float: right;
 	width: 500px;
 }
+nav li {
+	float: left;
+}
 
 a {
-	background-color:#ADD6FF;
 	color: black;
 	text-decoration: none;
-	display: inline-block;
-	float: left;
 	padding: 28px;
 }
 
-a:hover {
-	background-color:#FFD1D1;
-}
-
 h1 { 
-		font-family: arial, sans-serif;
-		color:black;
-		font-size:68px;
-		font-style:normal;
-		font-weight:700;
-		text-align:center;
-		text-transform:capitalize;
+	font-family: arial, sans-serif;
+	color:black;
+	font-size:68px;
+	font-style:normal;
+	font-weight:700;
+	text-align:center;
+	text-transform:capitalize;
 } 
 
 ul {
-		list-style-type: none;
+	list-style-type: none;
 }
 
 h2 {
-		font-family: Gabriola; 
-		color:black;
-		font-size:30px;
-		font-style:normal;
-		font-weight:700;
-		text-align:center;
-		text-transform:capitalize; 
-}
-
-footer {
-	font-family: arial, sans-serif;
-	font-size: 18px;
-	float: right;
-	width: 500px;
-}
-
-div.column {
-		float: left;
-		width: 450px;
-		height: 600px;
-		padding: 20px;
-		margin: 0;
-		font-size:18px;
-		font-style:normal;
-		font-weight:300;
-}
-figure{
-	float: right;
-	max-width: 33%
+	font-family: "Gabriola"; 
+	color:black;
+	font-size:30px;
+	font-style:normal;
+	font-weight:700;
 	text-align:center;
-	height: 33%;
+	text-transform:capitalize; 
 }
-figure{
-	width:33%;
 
+figure {
+	float: left;
+	width: 25%;
+	text-align: center;
+}
+section.homepage-figures figure img { 
+	width:100%; 
+	float: left;
+	max-width: 25%
+	text-align:center;
+	height: 25%;
+	margin:0; 
+	padding-bottom: .5em;
 }
 footer {
+	background-color: #FFD1D1;
 	font-family: arial, sans-serif;
 	font-size: 18px;
-	float: left;
-	width: 500px;	
+	width: 100%;
+	padding: 1em 0;	
 }
+footer .contact-info {
+	float: right;
+}
+
+section.blog-figures figure img {
+	width:100%; 
+	float: right;
+	max-width: 33.33%
+	text-align:center;
+	height: 25%;
+	margin:10; 
+	padding-bottom: .10em 0;
+
+}
+div.column {
+	float: left;
+	width: 450px;
+	height: 600px;
+	padding: 20px;
+	margin: 0;
+	font-size:18px;
+	font-style:normal;
+	font-weight:300;
+}
+
