--- a/Unit4ProjectBirds/css/main.css
+++ b/Unit4ProjectBirds/css/main.css
@@ -1,10 +1,10 @@
 body{
-	background-color:#0b6a8f;
+	background-color:#77ACC0;
 }
 h1{ 
 	font-family: 'Loved by the King', cursive;
 	color:black;
-	font-size:46px;
+	font-size: 2.875em;
 	font-style:normal;
 	font-weight:700;
 	text-align:center;
@@ -17,4 +17,11 @@ h1{
 img {
 	width: 20%;
 	margin: 0 1em;
+}
+@media only screen and(max-width: 400px) {
+	.article {
+		float:none;
+		width:auto;
+}
+@media only screen and(min-width:320px) and (max-width:480px) {
 }
