--- a/Unit4ProjectBirds/css/main.css
+++ b/Unit4ProjectBirds/css/main.css
@@ -1,27 +1,118 @@
 body{
-	background-color:#77ACC0;
+	background-color:#ADD6FF;
+	margin:0; 
+	padding:0;
+	font-family: arial. sans-serif;
+	color: #210d08;
+	box-sizing: border-box;  
+}
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
 }
 h1{ 
 	font-family: 'Loved by the King', cursive;
-	color:black;
-	font-size: 2.875em;
+	color:#210d08;
+	font-size: 3.875em;
 	font-style:normal;
 	font-weight:700;
 	text-align:center;
 	text-transform:capitalize;   
 }
+h2{
+	font-family: arial, sans-serif;
+	color:#210d08;
+	font-size: 1.875em;
+	font-style:normal;
+	font-weight:700;
+	text-align:center;   
+}
+ul {
+	list-style-type: none;
+}
 
-.hero-image {
-	text-align: center;
+header {
+	overflow: auto;
+	background-color: #FFD1D1;
+	background-position: left;
+	background-repeat: no-repeat;
+}
+nav {
+	font-family: arial, sans-serif;
+	font-size: 18px;
+	float: right;
+	width: 500px;
+}
+nav li {
+	float: left;
+}
+a {
+	color: #210d08;
+	text-decoration: none;
+	padding: 28px;
 }
 img {
-	width: 20%;
+	width: 12%;
 	margin: 0 1em;
 }
-@media only screen and(max-width: 400px) {
+
+figure {
+	float: left;
+	width: 25%;
+	text-align: center;
+}
+section.homepage-figures figure img { 
+	width: 100%; 
+	float: left;
+	max-width: 33.33%
+	text-align: center;
+	margin: 0.5em; 
+	padding-bottom: .5em;
+
+}
+p {
+	font-family: arial. sans-serif;
+	color: #210d08;
+	font-size: 1.25em;
+	font-style:normal;
+	font-weight:700;
+	text-align: center;
+	margin: .5em;
+}
+ul {
+	font-family: arial. sans-serif;
+	color: #210d08;
+	font-size: .975em;
+	font-style:normal;
+	font-weight:700;
+	text-align: center;
+	padding: .10em;
+}
+footer {
+	border:1px solid black;
+    padding:10px;
+    margin:30px;
+	background-color: #FFD1D1;
+	font-family: arial, sans-serif;
+	font-size: 18px;
+	width: 100%;
+	padding: 1em 0;	
+	float: left;
+}
+
+footer .contact-info {
+	float: right;
+}
+
+@media only screen and (min-width:320px) and (max-width:480px) {
+}
+
+@media only screen and (max-width: 400px) {
 	.article {
 		float:none;
 		width:auto;
-}
-@media only screen and(min-width:320px) and (max-width:480px) {
-}
