--- a/Unit4ProjectBirds/css/main.css
+++ b/Unit4ProjectBirds/css/main.css
@@ -2,9 +2,9 @@ body{
 	background-color:#ADD6FF;
 	margin:0; 
 	padding:0;
+	box-sizing: border-box;  
 	font-family: arial. sans-serif;
 	color: #210d08;
-	box-sizing: border-box;  
 }
 
 .clearfix:after {
@@ -57,7 +57,7 @@ a {
 	padding: 28px;
 }
 img {
-	width: 12%;
+	width: 10%;
 	margin: 0 1em;
 }
 
@@ -73,7 +73,6 @@ section.homepage-figures figure img {
 	text-align: center;
 	margin: 0.5em; 
 	padding-bottom: .5em;
-
 }
 p {
 	font-family: arial. sans-serif;
@@ -107,6 +106,27 @@ footer {
 
 footer .contact-info {
 	float: right;
+}
+
+div.column {
+	float: left;
+	width: 450px;
+	height: 600px;
+	padding: 20px;
+	margin: 0;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 300;
+}
+
+section.blog-figures figure img {
+	width: 100%; 
+	float: right;
+	max-width: 33.33%
+	text-align: center;
+	height: 25%;
+	margin: 0; 
+	padding-bottom: .10em 0;
 }
 
 @media only screen and (min-width:320px) and (max-width:480px) {
