--- a/Unit4ProjectBirds/css/main.css
+++ b/Unit4ProjectBirds/css/main.css
@@ -54,8 +54,12 @@ nav li {
 a {
 	color: #210d08;
 	text-decoration: none;
-	padding: 28px;
+	padding: 32px;
 }
+a:hover {
+	background-color:#ADD6FF;
+}
+
 img {
 	width: 10%;
 	margin: 0 1em;
@@ -67,9 +71,9 @@ figure {
 	text-align: center;
 }
 section.homepage-figures figure img { 
-	width: 100%; 
+	width: 100%;
+	height: 200px; 
 	float: left;
-	max-width: 33.33%
 	text-align: center;
 	margin: 0.5em; 
 	padding-bottom: .5em;
@@ -108,7 +112,7 @@ footer .contact-info {
 	float: right;
 }
 
-div.column {
+.column {
 	float: left;
 	width: 450px;
 	height: 600px;
@@ -119,20 +123,23 @@ div.column {
 	font-weight: 300;
 }
 
-section.blog-figures figure img {
+div.blog-figures figure img {
 	width: 100%; 
 	float: right;
-	max-width: 33.33%
 	text-align: center;
-	height: 25%;
+	height: 33.33%;
 	margin: 0; 
 	padding-bottom: .10em 0;
 }
 
 @media only screen and (min-width:320px) and (max-width:480px) {
+	body{
+		background:white;
+
+	}
+	figure{
+		float: none;
+		width: 100%;
+	}
 }
 
-@media only screen and (max-width: 400px) {
-	.article {
-		float:none;
-		width:auto;
