--- a/Unit4ProjectBirds/css/main.css
+++ b/Unit4ProjectBirds/css/main.css
@@ -25,12 +25,21 @@ h1{
 	text-transform:capitalize;   
 }
 h2{
-	font-family: arial, sans-serif;
+	font-family: "Gabriola";
 	color:#210d08;
 	font-size: 1.875em;
 	font-style:normal;
 	font-weight:700;
 	text-align:center;   
+}
+h3 {
+	font-family: "Gabriola"; 
+	color: #210d08;
+	font-size: 30px;
+	font-style: normal;
+	font-weight: 700;
+	text-align: center; 
+	padding-bottom: 32px;
 }
 ul {
 	list-style-type: none;
@@ -72,7 +81,7 @@ figure {
 }
 section.homepage-figures figure img { 
 	width: 100%;
-	height: 200px; 
+	height: 22.00em; 
 	float: left;
 	text-align: center;
 	margin: 0.5em; 
@@ -118,18 +127,19 @@ footer .contact-info {
 	height: 600px;
 	padding: 20px;
 	margin: 0;
-	font-size: 18px;
-	font-style: normal;
-	font-weight: 300;
+	font-size: 16px;
+	font-style: none;
+	font-weight: 200;
 }
 
 div.blog-figures figure img {
 	width: 100%; 
 	float: right;
 	text-align: center;
-	height: 33.33%;
+	height: 32.000em; 
+	padding-right:.50em;
 	margin: 0; 
-	padding-bottom: .10em 0;
+	padding-bottom: .15em;
 }
 
 @media only screen and (min-width:320px) and (max-width:480px) {
