--- a/Unit4ProjectBirds/css/main.css
+++ b/Unit4ProjectBirds/css/main.css
@@ -3,10 +3,12 @@ body{
 	margin:0; 
 	padding:0;
 	box-sizing: border-box;  
-	font-family: arial. sans-serif;
+	font-family: arial, sans-serif;
 	color: #210d08;
+	border-style: solid;
+    border-color: #210d08;
+    border-width: .75em
 }
-
 .clearfix:after {
 	visibility: hidden;
 	display: block;
@@ -15,7 +17,7 @@ body{
 	clear: both;
 	height: 0;
 }
-h1{ 
+h1 { 
 	font-family: 'Loved by the King', cursive;
 	color:#210d08;
 	font-size: 3.875em;
@@ -24,8 +26,8 @@ h1{
 	text-align:center;
 	text-transform:capitalize;   
 }
-h2{
-	font-family: "Gabriola";
+h2 {
+	font-family: "sans-serif";
 	color:#210d08;
 	font-size: 1.875em;
 	font-style:normal;
@@ -39,22 +41,21 @@ h3 {
 	font-style: normal;
 	font-weight: 700;
 	text-align: center; 
-	padding-bottom: 32px;
+	padding-bottom: 8px;
 }
 ul {
 	list-style-type: none;
 }
-
 header {
-	overflow: auto;
 	background-color: #FFD1D1;
 	background-position: left;
 	background-repeat: no-repeat;
 }
 nav {
 	font-family: arial, sans-serif;
-	font-size: 18px;
+	font-size: 20px;
 	float: right;
+	padding-top: 1.5em;
 	width: 500px;
 }
 nav li {
@@ -68,12 +69,10 @@ a {
 a:hover {
 	background-color:#ADD6FF;
 }
-
 img {
-	width: 10%;
-	margin: 0 1em;
+	width: 12%;
+	margin: 0 0em;
 }
-
 figure {
 	float: left;
 	width: 25%;
@@ -81,75 +80,83 @@ figure {
 }
 section.homepage-figures figure img { 
 	width: 100%;
-	height: 22.00em; 
+	height: 21.00em; 
 	float: left;
 	text-align: center;
 	margin: 0.5em; 
 	padding-bottom: .5em;
 }
-p {
-	font-family: arial. sans-serif;
-	color: #210d08;
-	font-size: 1.25em;
-	font-style:normal;
-	font-weight:700;
-	text-align: center;
-	margin: .5em;
-}
 ul {
 	font-family: arial. sans-serif;
 	color: #210d08;
-	font-size: .975em;
+	font-size: 18px;
 	font-style:normal;
 	font-weight:700;
 	text-align: center;
 	padding: .10em;
 }
 footer {
-	border:1px solid black;
-    padding:10px;
-    margin:30px;
 	background-color: #FFD1D1;
-	font-family: arial, sans-serif;
-	font-size: 18px;
+	font-family: sans-serif;
+	font-size: 20px;
+	font-weight:700;
 	width: 100%;
-	padding: 1em 0;	
-	float: left;
+	padding: 1.26em .0em;	
 }
-
 footer .contact-info {
 	float: right;
 }
-
 .column {
 	float: left;
 	width: 450px;
 	height: 600px;
 	padding: 20px;
-	margin: 0;
+	margin: .9em;
+	margin-left: 4.5em;
+	margin-top: 4.5em;
 	font-size: 16px;
-	font-style: none;
-	font-weight: 200;
+	font-style: normal;
+	font-weight: 250;
 }
-
 div.blog-figures figure img {
 	width: 100%; 
 	float: right;
-	text-align: center;
 	height: 32.000em; 
 	padding-right:.50em;
 	margin: 0; 
-	padding-bottom: .15em;
+	margin-bottom: .5em;
 }
+div.blog-figures figure{
+	margin-left: 6.0em;
 
+}
 @media only screen and (min-width:320px) and (max-width:480px) {
 	body{
 		background:white;
-
-	}
-	figure{
+}
+	nav{
+		float:none;
+}
+	nav a:hover{
+		background-color:inherit;
+}
+figure{
 		float: none;
 		width: 100%;
-	}
+		margin: 0;
+}
+section.homepage-figures figure img{
+		margin-left:0;
+		margin-right:0;
+}
+.column {
+		margin-left:0;
+		margin-right: 
+}
+div.blog-figures figure img{
+		margin-left:0;
+		margin-right:0;
+}
+		
 }
 
