--- a/Unit4ProjectBirds/css/main.css
+++ b/Unit4ProjectBirds/css/main.css
@@ -119,7 +119,7 @@ footer .contact-info {
 .column {
 	float: left;
 	width: 450px;
-	height: 600px;
+	height: 575px;
 	padding: 20px;
 	margin: .9em;
 	margin-left: 4.5em;
@@ -135,7 +135,7 @@ div.blog-figures figure img {
 	height: 32.000em; 
 	padding-right:.50em;
 	margin: 0; 
-	margin-bottom: 1.5em;
+	margin-bottom: 0.5em;
 }
 div.blog-figures figure {
 	margin-left: 6.0em;
@@ -153,16 +153,21 @@ figure{
 		margin: 0;
 }
 .column, div.blog-figures figure, section.homepage-figures figure img{ 
+		float:none;
 		margin-left:0;
 		margin-right:0;
 }
 div.blog-figures figure img{
+		float:none;
 		margin-left:0;
-		margin-right:0;
+		margin-right:0;	
 }
 .column{
 		padding:0;
-		width:100%;
-}	
+		width:100%;	
+}
+	footer: .hover{
+		background-color:inherit;
+}
 }
 
